--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-498.0KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 3ca3da44-d9e8-11ec-bbae-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇺🇸 美国-215.6KB/s(Youtube:不良林), server: us-02.pickaxe.sh, port: 443, type: trojan, password: 7J0Cmup52a7To8PI, sni: us-02.pickaxe.sh, skip-cert-verify: true}
-  - {name: 波兰-595.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 波兰-982.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇨🇦 加拿大-349.0KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇫🇷 法国-2.22MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 波兰-755.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: us-02.pickaxe.sh, port: 443, type: trojan, password: 7J0Cmup52a7To8PI, sni: us-02.pickaxe.sh, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-189.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: wg.nfeng6.pp.ua, port: 52217, type: vmess, uuid: 4e66672a-184c-30e4-900a-a19004c38e85, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-727.9KB/s(Youtube:不良林), server: jpqjd7.zhs.company, port: 443, type: vmess, uuid: b4416cfb-f462-37c1-a840-6a20dcfa43ec, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: jpqjd7.zhs.company}}
+  - {name: 🇺🇸 美国-232.1KB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11003, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11011, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-526.3KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: 51.89.81.132, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.81.132}}
+  - {name: 🇬🇧 英国-778.4KB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-498.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.6KB/s(Youtube:不良林)
-      - 波兰-595.9KB/s(Youtube:不良林)
-      - 波兰-982.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.22MB/s(Youtube:不良林)
-      - 波兰-755.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-727.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
