--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-243.7KB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-778.4KB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
-  - {name: 🇨🇳 中国-386.8KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-827.7KB/s(Youtube:不良林), server: jpqjd7.zhs.company, port: 443, type: vmess, uuid: b4416cfb-f462-37c1-a840-6a20dcfa43ec, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: jpqjd7.zhs.company}}
-  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: wg.nfeng6.pp.ua, port: 52217, type: vmess, uuid: 4e66672a-184c-30e4-900a-a19004c38e85, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-13.18MB/s(Youtube:不良林), server: c61s4.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.107.226.238, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 38.107.226.238, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-778.4KB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: c61s3.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-13.18MB/s(Youtube:不良林), server: c61s4.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-550.4KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.86MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇯🇵 日本-354.0KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-243.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-827.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇬🇧 英国-778.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-550.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
